crates/java-syntax/src/snapshots/java_syntax__lexer__tests__error_invalid_numbers.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_errors(\"123_\")"
---
[
    InvalidNumber,
]
