crates/java-syntax/src/snapshots/java_syntax__lexer__tests__error_invalid_unicode_escapes.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_errors(\"int \\\\u006 = 1;\")"
---
[
    UnexpectedChar(
        '\\',
    ),
    InvalidUnicodeEscape,
]
