crates/java-syntax/src/snapshots/java_syntax__lexer__tests__error_unterminated_string-2.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_errors(\"\\\"line1\\nline2\\\"\")"
---
[
    UnterminatedString,
    UnterminatedString,
]
