crates/java-syntax/src/snapshots/java_syntax__lexer__tests__escape_sequence_s.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(r#\" \"trailing space\\s\" \"#)"
---
[
    (
        WHITESPACE,
        " ",
    ),
    (
        STRING_LIT,
        "\"trailing space\\s\"",
    ),
    (
        WHITESPACE,
        " ",
    ),
]
