crates/java-syntax/src/snapshots/java_syntax__lexer__tests__floating_point_literals-2.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"0x1.0p3 0x.8P-2f\")"
---
[
    (
        NUMBER_LIT,
        "0x1.0p3",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        NUMBER_LIT,
        "0x.8P-2f",
    ),
]
