crates/java-syntax/src/snapshots/java_syntax__lexer__tests__floating_point_literals.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"1.23 .5 10. 3.14f 6.022e23 1e-9d\")"
---
[
    (
        NUMBER_LIT,
        "1.23",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        NUMBER_LIT,
        ".5",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        NUMBER_LIT,
        "10.",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        NUMBER_LIT,
        "3.14f",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        NUMBER_LIT,
        "6.022e23",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        NUMBER_LIT,
        "1e-9d",
    ),
]
