crates/java-syntax/src/snapshots/java_syntax__lexer__tests__integer_literals-2.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"0x0 0x1A2B 0XCAFE_BABE 0xFFl\")"
---
[
    (
        NUMBER_LIT,
        "0x0",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        NUMBER_LIT,
        "0x1A2B",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        NUMBER_LIT,
        "0XCAFE_BABE",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        NUMBER_LIT,
        "0xFFl",
    ),
]
