crates/java-syntax/src/snapshots/java_syntax__lexer__tests__integer_literals-3.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"0b0 0B1010_0101 0b11L\")"
---
[
    (
        NUMBER_LIT,
        "0b0",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        NUMBER_LIT,
        "0B1010_0101",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        NUMBER_LIT,
        "0b11L",
    ),
]
