crates/java-syntax/src/snapshots/java_syntax__lexer__tests__integer_literals.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"0 123 1_000_000 456L\")"
---
[
    (
        NUMBER_LIT,
        "0",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        NUMBER_LIT,
        "123",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        NUMBER_LIT,
        "1_000_000",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        NUMBER_LIT,
        "456L",
    ),
]
