crates/java-syntax/src/snapshots/java_syntax__lexer__tests__invalid_underscore_placements-3.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_errors(\"123._45\")"
---
[
    InvalidNumber,
]
