crates/java-syntax/src/snapshots/java_syntax__lexer__tests__javadoc.snap
---
source: crates/java-syntax/src/lexer.rs
expression: lex_tokens(source)
---
[
    (
        JAVADOC,
        "/**\n * This is a Javadoc comment\n * @param x the value\n */",
    ),
    (
        WHITESPACE,
        "\n",
    ),
    (
        PUBLIC_KW,
        "public",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        INT_KW,
        "int",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        IDENTIFIER,
        "x",
    ),
    (
        SEMICOLON,
        ";",
    ),
    (
        WHITESPACE,
        "\n",
    ),
]
